# flat-cyborg

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  TEST.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
docs/: USAGE.md
scripts/: smoke-llm.sh  smoke-local.sh
src/: ansi.rs  error.rs  extract.rs  jitter.rs  lib.rs  main.rs  pty.rs  screen.rs  terminal.rs  update.rs  wrapper.rs
src/ansi/: detect.rs  mod.rs  parser.rs  sanitize.rs  strip.rs
tests/: acceptance.rs  cli.rs
tests/fixtures/: claude_poem.txt  claude_short.txt  codex_long.txt  codex_short.txt
