[package]
name = "flat-cyborg"
version = "0.1.0"
edition = "2021"
description = "Asynchronous PTY wrapper for bidirectional I/O interception of interactive CLI applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Replikanti/flat-cyborg"
publish = false

[lib]
name = "flat_cyborg"
path = "src/lib.rs"

[[bin]]
name = "flat-cyborg"
path = "src/main.rs"

[dependencies]
pty-process = { version = "0.5.3", features = ["async"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "process", "time", "sync"] }

[dev-dependencies]
